<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/mHome"
        android:title="@string/home"
        android:icon="@drawable/home_selector"
        android:titleTextAppearance="@style/MenuItemTextAppearance"/>

    <item android:id="@+id/mMaps"
        android:title="@string/maps"
        android:icon="@drawable/maps_selector"
        android:titleTextAppearance="@style/MenuItemTextAppearance"/>

    <item
        android:title=""
        android:titleTextAppearance="@style/MenuItemTextAppearance"/>

    <item android:id="@+id/mHistory"
        android:title="@string/history"
        android:icon="@drawable/history_selector"
        android:titleTextAppearance="@style/MenuItemTextAppearance"/>

    <item android:id="@+id/mProfile"
        android:title="@string/profile"
        android:icon="@drawable/profile_selector"
        android:titleTextAppearance="@style/MenuItemTextAppearance"/>
</menu>
