<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="12dp"
    android:elevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="24dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_warning"
            android:layout_marginBottom="14dp"
            app:tint="@color/md_theme_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_history"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="12dp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/can_t_be_undone"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                app:cornerRadius="10dp"
                android:backgroundTint="@color/accent_color"
                android:textColor="@color/custom_text"
                android:text="@string/no_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:cornerRadius="10dp"
                android:backgroundTint="@color/md_theme_error"
                android:text="@string/delete" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
