<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="12dp"
    android:elevation="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:layout_marginBottom="14dp"
            app:tint="@color/md_theme_primary" />

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_successful"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="12dp"
            android:gravity="center" />
        <TextView
            android:id="@+id/tvDialogMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_message"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:gravity="center" />

        <Button
            android:id="@+id/btnDialogContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_text"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>
