<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ChangePasswordFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/iv_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/b_jakarta"
        android:text="@string/change_password"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/back_button"
        android:padding="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@android:color/white" />

    <FrameLayout
        android:id="@+id/fl_user_icon"
        android:layout_width="138dp"
        android:layout_height="138dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/profile_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile">

        <ImageView
            android:id="@+id/iv_user_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:contentDescription="@string/user_icon"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_user_fill" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="24dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_user_icon"
        app:startIconDrawable="@drawable/ic_lock"
        tools:alpha="100">

        <com.dicoding.sortify.customview.MyPassword
            android:id="@+id/ed_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/m_jakarta"
            android:hint="@string/enter_your_new_password"
            android:inputType="textPassword"
            android:minHeight="56dp"
            android:paddingStart="48dp"
            android:paddingEnd="4dp"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
        app:startIconDrawable="@drawable/ic_lock"
        tools:alpha="100">

        <com.dicoding.sortify.customview.MyPassword
            android:id="@+id/ed_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/m_jakarta"
            android:hint="@string/confirm_your_new_password"
            android:inputType="textPassword"
            android:minHeight="56dp"
            android:paddingStart="48dp"
            android:paddingEnd="4dp"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eprofile_btn"
        android:layout_width="363dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sb_jakarta"
        android:text="@string/edit_profile"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextLayout"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
