<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.ForgotPasswordFragment">


    <ImageView
        android:layout_width="428dp"
        android:layout_height="390dp"
        android:contentDescription="@string/authentication_image"
        android:src="@drawable/iv_authentication"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="316dp"
        app:cardCornerRadius="45dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/b_jakarta"
                android:textStyle="bold"
                android:gravity="center"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="-14dp"
                android:text="@string/forgot_password_title"
                android:textColor="@color/custom_text"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.096" />

            <TextView
                android:id="@+id/tv_sign_in_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/m_jakarta"
                android:gravity="center"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="-14dp"
                android:text="@string/enter_your_account_email_to_reset_password"
                android:textColor="@color/custom_text"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_in"
                app:layout_constraintVertical_bias="0.0" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_desc"
                app:startIconDrawable="@drawable/ic_email"
                tools:alpha="100"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp">

                <com.dicoding.sortify.customview.MyEmail
                    android:id="@+id/ed_forgot_pass_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/m_jakarta"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:minHeight="56dp"
                    android:paddingStart="48dp"
                    android:paddingEnd="4dp"
                    android:textSize="14sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/continue_button"
                android:layout_width="363dp"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sb_jakarta"
                android:text="@string/continue_text"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/back_button"
        android:padding="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@android:color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>